go/gcp/testdata/compute_firewallList.json
{
 "kind": "compute#firewallList",
 "id": "projects/test-project/global/firewalls",
 "items": [
  {
   "kind": "compute#firewall",
   "id": "8514505193214716941",
   "creationTimestamp": "2017-07-11T20:09:22.929-07:00",
   "name": "some-firewall",
   "description": "It is some firewall",
   "network": "https://www.googleapis.com/compute/v1/projects/test-project/global/networks/test-lab",
   "priority": 1000,
   "sourceRanges": [
    "333.111.222.555/38"
   ],
   "allowed": [
    {
     "IPProtocol": "tcp",
     "ports": [
      "22",
      "3389"
     ]
    }
   ],
   "direction": "INGRESS",
   "selfLink": "https://www.googleapis.com/compute/v1/projects/test-project/global/firewalls/some-firewall"
  }
 ],
 "selfLink": "https://www.googleapis.com/compute/v1/projects/test-project/global/firewalls"
}
